Try to normalize style for code snippets, per Gerald. 	"`<code>./some/command --with options --and -such</code>`" and 	"...use the <CODE>-super-optimizer</CODE> option to..."

--- a/htdocs/install/build.html
+++ b/htdocs/install/build.html
@@ -12,8 +12,8 @@ runtime libraries.
 versions may work, then again they might not.  To be safe build with gnu-make.
 
 <p><b>Building a native compiler</b>
-<p>For a native build issue the command "make bootstrap".  This will build
-the entire egcs compiler system, which includes the following steps:
+<p>For a native build issue the command `<code>make bootstrap</code>'.  This 
+will build the entire egcs compiler system, which includes the following steps:
 
 <ul>
   <li> Build host tools necessary to build the compiler such as texinfo, bison,
@@ -30,10 +30,11 @@ the entire egcs compiler system, which includes the following steps:
   step.<p>
 </ul>
 
-<p>If you are short on disk space you might consider "make bootstrap-lean"
-instead.  This is identical to "make bootstrap" except that object files
-from the stage1 and stage2 of the 3-stage bootstrap of the compiler are
-deleted as soon as they are no longer needed.
+<p>If you are short on disk space you might consider `<code>make 
+bootstrap-lean</code>' instead.  This is identical to `<code>make 
+bootstrap</code>' except that object files from the stage1 and 
+stage2 of the 3-stage bootstrap of the compiler are deleted as 
+soon as they are no longer needed.
 
 <p>If you want to save additional space during the bootstrap and in
 the final installation as well, you can build the compiler binaries
@@ -42,11 +43,11 @@ without debugging information with "make CFLAGS='-O' LIBCFLAGS='-g
 roughly 40% of disk space both for the bootstrap and the final installation.
 (Libraries will still contain debugging information.)
 
-<p>If you used the flag <tt>--enable-languages=...</tt> to restrict
+<p>If you used the flag <code>--enable-languages=...</code> to restrict
 the compilers to be built, only those you've actually enabled will be
 built. This will of course only build those runtime libraries, for
 which the particular compiler has been built.  Please note,
-that re-defining LANGUAGES when calling <tt>make bootstrap</tt>
+that re-defining LANGUAGES when calling `<code>make bootstrap</code>'
 <b>*does not*</b> work anymore!
 
 <p><b>Building a cross compiler</b>
@@ -74,15 +75,15 @@ following steps:
 
 <p><b>Building in parallel</b>
 
-<p> If you have a multiprocessor you can use `<tt>make bootstrap
-MAKE="make -j 2" -j 2</tt>' instead of just `<tt>make bootstrap</tt>'
+<p> If you have a multiprocessor you can use `<code>make bootstrap
+MAKE="make -j 2" -j 2</code>' instead of just `<code>make bootstrap</code>'
 when building EGCS.  You can use a bigger number instead of two if
 you like.  In most cases, it won't help to use a number bigger than
 the number of processors in your machine.
 
 <p>
 <hr>
-<i>Last modified on Jue 4, 1999.</i>
+<i>Last modified on June 5, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
