--- a/htdocs/install/finalinstall.html
+++ b/htdocs/install/finalinstall.html
@@ -6,9 +6,10 @@
 <h1 align="center">Final install egcs</h1>
 
 <p>Now that egcs has been built and tested, you can install it with
-`cd <i>objdir</i>; make install' for a native compiler or
-`cd <i>objdir</i>; make install LANGUAGES="c c++"' for a cross compiler
-(note installing cross compilers will be easier in the next release!).
+`<code>cd <i>objdir</i>; make install</code>' for a native compiler or
+`<code>cd <i>objdir</i>; make install LANGUAGES="c c++"<code>' for 
+a cross compiler (note installing cross compilers will be easier in the 
+next release!).
 
 
 <p>That step completes the installation of egcs; user level binaries can
@@ -30,7 +31,7 @@ it!)
 
 <p>
 <hr>
-<i>Last modified on March  9, 1999.</i>
+<i>Last modified on May 29, 1999.</i>
 
 </body>
 </html>
