--- a/htdocs/install/test.html
+++ b/htdocs/install/test.html
@@ -23,7 +23,7 @@ dejagnu snapshot</a> available in egcs.cygnus.com:/pub/egcs/infrastructure until
 a new version of dejagnu can be released.
 
 <p>Assuming you've got the testsuites unpacked and have installed an appropriate
-dejagnu, you can run the testsuite with "cd <i>objdir</i>; make -k check".
+dejagnu, you can run the testsuite with` <code>cd <i>objdir</i>; make -k check</code'>.
 This may take a long time.  Go get some lunch.
 
 <p>The testing process will try to test as many components in the egcs
@@ -38,7 +38,7 @@ fine grained control over whether or not a test is expected to fail.  We expect
 to fix this problem in future releases.
 
 <hr>
-<i>Last modified on March 27, 1999.</i>
+<i>Last modified on May 29, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
