Add testsuite regressions for solaris2.7.  Add libstdc++ regressions for solaris2.5 and solaris2.7

--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -395,6 +395,7 @@ OK
 <td>
 990513-1.c
 asm-extn1.C
+tComplex
 </td>
 <td>
 </td>
@@ -414,6 +415,9 @@ sparc-sun-solaris2.7
 OK
 </td>
 <td>
+990513-1.c
+asm-extn1.C
+tComplex
 </td>
 <td>
 </td>
