Remove tmap/tstring failure on alpha-dec-osf4. Add regressions for stunos

--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -106,7 +106,6 @@ alpha-dec-osf4.0
 OK
 </td>
 <td>
-tmap.cc, tstring.cc
 (gcc,g++,g77,objc in progress)
 </td>
 <td>
@@ -437,6 +436,10 @@ sparc-sun-sunos4.1
 OK
 </td>
 <td>
+990513-1.c
+asm-extn1.C
+static3.C
+static6.C
 </td>
 <td>
 </td>
