tgetent is not an egcs/gcc problem, it is a bug in libg++ itself.

--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -194,7 +194,7 @@ OK
 <td>
 </td>
 <td>
-tgetent redeclaration
+OK
 </td>
 <td>
 OK
@@ -476,9 +476,9 @@ is dependent on specific versions of gas & gld and egcs/gcc.  It is expected
 that egcs-1.1.2 may fail in the compilation stage while gcc-2.95 may fail
 the execution stage. 
 
-<p> libg++ uses some nonstandard features (like M_PI) which do not exist
-on some systems (notably Stunos).  Hacks where installed to work around
-the non-portable code in libg++ so that it could be tested.
+<p> libg++ uses some nonstandard features (like M_PI, or redefining tcgetent).
+These are bugs in libg++, not egcs or its support libraries.  Hacks were
+installed to work around these libg++ bugs so that libg++ could be tested.
 
 <h2> Package/Feature Testing </h2>
 <p> Do not worry about this yet.  Please concentrate on getting the egcs-1.1.2
@@ -497,7 +497,7 @@ to add at least one major C++ and Fortran package).
   <li> Fortran package(s)
 </ul>
 
-<p><i>Last modified on June 7, 1999.</i>
+<p><i>Last modified on June 8, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
