Note the majority of the remaining freebsd-2.2.6 failures are problems with global ctors/dtors.

--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -163,16 +163,13 @@ i386-pc-freebsd2.2.6
 OK
 </td>
 <td>
-gcov-1
-gcov-2
-major c++ failures
+ctor/dtor issues
 19990502-0
-objc tests
 </td>
 <td>
 </td>
 <td>
-linker errors
+ctor/dtor issues
 </td>
 <td>
 OK
