--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -43,10 +43,10 @@ sources with the following sequence of commands:
 
 <p>Set CVSROOT in your environment to
 
-<pre>	:pserver:anoncvs@egcs.cygnus.com:/cvs/egcs</pre> 
+<pre>	:pserver:anoncvs@anoncvs.cygnus.com:/cvs/egcs</pre> 
 
 <p>Or alternately add 
-<pre>	-d :pserver:anoncvs@egcs.cygnus.com:/cvs/egcs</pre>
+<pre>	-d :pserver:anoncvs@anoncvs.cygnus.com:/cvs/egcs</pre>
 in the CVS commands below (place it immediately after <code>"cvs"</code> -- ie
 before any other CVS arguments).
 
@@ -98,7 +98,7 @@ the web pages.
 <p>Enjoy!
 
 <hr>
-<i>Last modified on May 17, 1999.</i>
+<i>Last modified on June 8, 1999.</i>
 <hr>
 
 <a href="">Return to the egcs home page</a>
