Add alpha-dec regressions.

--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -106,7 +106,12 @@ alpha-dec-osf4.0
 OK
 </td>
 <td>
-(gcc,g++,g77,objc in progress)
+990513-1
+mzero?
+major eh failures
+bf-10.m
+bf-16.m
+bf-17.m
 </td>
 <td>
 </td>
