Update freebsd-2.2.6 issues (ctor/dtor problem is fixed).

--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -163,13 +163,16 @@ i386-pc-freebsd2.2.6
 OK
 </td>
 <td>
-ctor/dtor issues
+instantiate4.C
+static3.C
+static6.C
 19990502-0
 </td>
 <td>
 </td>
 <td>
-ctor/dtor issues
+tString
+tRational
 </td>
 <td>
 OK
