OpenServer will not bootstrap.   fast-fixinc isn't used on this target.

--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -256,7 +256,7 @@ N/A
 i686-pc-sco3.2v5.0.5
 </td>
 <td>
-OK
+No (dwarf1 bug)
 </td>
 <td>
 tcomplex
@@ -282,6 +282,7 @@ u77-test.f
 <td>
 </td>
 <td>
+N/A
 </td>
 </tr>
 <tr>
