Add some general notes at the beginning.

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -1,10 +1,17 @@
 <html>
 <head>
-<title>Contributing Code</title>
+<title>Contributing</title>
 </head>
 
 <body>
-<h1 align="center">Contributing Code</h1>
+<h1 align="center">Contributing</h1>
+
+<p>We strongly encourage contributions of code, bugfixes, new
+optimizations, new features, documentation updates, web page
+improvements, etc.</p>
+
+<p>There are certain legal requirements and style issues which all
+contributions must meet.</p>
 
 <h2>Coding Standards</h2>
 
@@ -82,7 +89,7 @@
   mailinglist.
 
 <hr>
-<i>Last modified on February  27, 1999.</i>
+<i>Last modified on June 14, 1999.</i>
 
 <hr>
 <a href="">Return to the egcs home page</a>
