Rather complete redesign of this page. Add a navigation bar to the left and remove all sections except the introduction and news sections.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -7,9 +7,43 @@
 
 <h1 align="center">egcs project home page</h1>
 
+<TABLE>
+<TD VALIGN="TOP" WIDTH="8%" BGCOLOR="#FFFFBB">
+<H2>About</H2>
+<P>
+<A HREF="lists.html">Mailing lists</A><BR>
+<A HREF="timeline.html">Timeline</A><BR>
+<A HREF="thanks.html">Contributors</A><BR>
+</P>
+<H2>Docs</H2>
+<P>
+<A HREF="faq.html">FAQ</A><BR>
+<A HREF="onlinedocs">Manual</A><BR>
+<A HREF="install/index.html">Installation</A>
+</P>
+<H2>Development</H2>
+<P>
+<A HREF="contribute.html">Contributing</a><BR>
+<A HREF="cvs.html">CVS read access</A><BR>
+<A HREF="cvswrite.html">CVS write access</A>
+</P>
+<H2>Bugs</H2>
+<P>
+<A HREF="faq.html#bugreport">Reporting...</A><BR>
+<A HREF="bugs.html">Known bugs</A>
+</P>
+<H2>Download</H2>
+<P>
+<A HREF="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">Releases</A><BR>
+<A HREF="ftp://egcs.cygnus.com/pub/egcs/snapshots/index.html">Snapshots</A><BR>
+<A HREF="mirrors.html">Mirror sites</A>
+</P>
+</TD>
+
+<TD BGCOLOR="white">
 <img src="logo.jpg" alt="" align="right">
 
-Welcome to the egcs project!
+<p>Welcome to the egcs project!</p>
 
 <p>Originally, egcs started as an experimental step in the development
 of GCC, the GNU C compiler (cf. the <a href="mission.html">original
@@ -24,7 +58,8 @@ provides access to its <a href="#development_sources">development sources</a>
 with weekly snapshots and anonymous CVS.  All code continues to be <a
 href="contribute.html">assigned to the FSF</a> exactly as before.</p>
 
-<p>We will provide regular, high quality <a href="#releases">releases</a>.
+<p>We will provide regular, high quality 
+<a href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">releases</a>.
 We want those releases to work well on a variety of native (including
 GNU/Linux) and cross targets and use an extensive <a href="testresults/">test
 suite</a> as well as a <a href="benchresults/">benchmark suite</a> to
@@ -114,67 +149,8 @@ Jason Merrill.
 <a href="news.html">Older news and announcements...</a>
 <br><a href="onlinedocs/g77_news.html">Fortran news</a>
 
-
-<h2>FAQ &amp; Documentation</h2>
-
-<p>Got questions about egcs?  Please review our extensive <a
-href="onlinedocs/">online documentation</a> and especially <a
-href="faq.html">the FAQ</a> to see if the question has already been
-answered.</p>
-
-<p>We also offer an up-to-date version of the <a href="install/index.html">
-installation instructions and platform specific notes</a> and a <a
-href="bugs.html">list of known bugs</a>.
-
-
-<h2>Mailing Lists</h2>
-
-<p>Want to read about egcs development or post messages to the egcs
-lists?  All the information you need to access the <a href="lists.html">
-mailing lists</a> can be found here. 
-
-<h2><a name=development_sources>Development snapshots and CVS Access</a></h2>
-
-<p> The egcs project makes weekly snapshots of its development sources and
-provides remote CVS access to its source tree.
-
-<p>The snapshots are available from
-<a href="ftp://egcs.cygnus.com/pub/egcs/snapshots/index.html">
-ftp://egcs.cygnus.com/pub/egcs/snapshots/</a> and many <a
-href="mirrors.html">mirror sites</a> around the world.
-
-<p> <a href="cvs.html">
-Readonly CVS access</a> is available for everyone on the internet, and
-<a href="cvswrite.html">read-write CVS access</a> is available for major
-contributors.
-
-<p> Be aware that snapshots and CVS provides direct access to development
-sources, which can be unstable at times.  If you are using the development
-sources, we recommend you sign up for one or more of the
-<a href="lists.html">egcs mailing lists</a>.
-
-
-<h2><a name="releases">Releases</a></h2>
-
-<p>Releases are available from <a
-href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
-ftp://egcs.cygnus.com/pub/egcs/releases/</a> and many <a
-href="mirrors.html">mirror sites</a> around the world.
-See the <a href="timeline.html">timeline</a> for progress information.
-
-<h2><a name="thanks">Acknowledgements</a></h2>
-
-<p> No project of this size can be successful without contributions from
-numerous folks.  We have compiled a <a href="thanks.html">partial list of
-contributors.</a>
-
-<h2><a name="contributions">Contributions</a></h2>
-<p>We encourage contributions of code, bugfixes, new optimizations, new
-features, documentation updates, web page improvements, etc.
-
-There are certain 
-<a href="contribute.html">legal requirements and style issues</a>
-which all contributions must meet.
+</TD>
+</TABLE>
 
 <a name="glimpsebox"></a>
 <!--#include virtual="/searchbox.html"-->
@@ -182,7 +158,7 @@ which all contributions must meet.
 <address>
 <a href="about.html">The egcs team</a>
 <br>
-<small><i>Last modified on June  4, 1999.</i></small>
+<small><i>Last modified on June 14, 1999.</i></small>
 </address>
 
 </body>
