Remove all references to and usages of the Glimpse search engine.

--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -226,8 +226,8 @@ framework</b></a>.
 <dt><b>February 26, 1998</b></dt>
 <dd>
   The egcs web pages are now supported by egcs project hardware and
-  are <a href="#glimpsebox">searchable</a> with webglimpse.  The <a
-  href="cvs.html"> CVS</a> sources are browsable with the free <a
+  are searchable with webglimpse.  The <a href="cvs.html">CVS</a>
+  sources are browsable with the free <a
   href="http://www.freebsd.org/~fenner/cvsweb/">cvsweb</a> package.
 </dd>
 
@@ -265,9 +265,7 @@ framework</b></a>.
 </dl>
 
 <hr>
-<a name="glimpsebox"></a>
 <i>Last modified on May 30, 1999.</i>
 
-<!--#include virtual="/glimpsebox.html"-->
 </body>
 </html>
