--- a/htdocs/proj-cpplib.html
+++ b/htdocs/proj-cpplib.html
@@ -233,8 +233,5 @@ cpplib directly from language front ends:
 <p><a href="projects.html">Back to the projects page</a>
 <p><a href="index.html">Return to the EGCS home page</a>
 
-<p>
-<a name="glimpsebox"></a>
-<!--#include virtual="/glimpsebox.html"-->
-
-</body> </html>
+</body>
+</html>
