--- a/htdocs/projects.html
+++ b/htdocs/projects.html
@@ -524,8 +524,5 @@ example:
 <hr>
 <p><a href="index.html">Return to the EGCS home page</a>
 
-<p>
-<a name="glimpsebox"></a>
-<!--#include virtual="/glimpsebox.html"-->
-
-</body> </html>
+</body>
+</html>
