update AIX install information

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -157,7 +157,6 @@ cd ..<br>
 make bootstrap3<br>
 </code>
 
-
 <p><b>m68k-sun-sunos4.1.1</b><br>
 It is reported that you may need the GNU assembler on this platform.
 
@@ -185,8 +184,13 @@ which just exits with zero status and placing it in your path.
 
 <p><b>rs6000-ibm-aix*</b><br>
 <b>powerpc-ibm-aix*</b><br>
-At least one person as reported problems with older versions of gnu-make on
-this platform.  make-3.76 is reported to work correctly.
+AIX Make frequently has problems with egcs makefiles.  GNU Make 3.76 or
+newer is recommended to build on this platform.
+
+<p>Binutils does not support AIX 4.3 (at least through release 2.9).
+GNU as and GNU ld will not work properly and one should not configure egcs
+to use those GNU utilities.  Use the native AIX tools which do interoperate
+with egcs.
 
 <p><b>powerpc-*-linux-gnu*</b><br>
 You will need 
