Add a link to our readings page.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -21,6 +21,7 @@
 <A HREF="faq.html">FAQ</A><BR>
 <A HREF="onlinedocs">Manual</A><BR>
 <A HREF="install/index.html">Installation</A>
+<A HREF="readings.html">Readings</A>
 </P>
 <H2>Development</H2>
 <P>
@@ -159,7 +160,7 @@ Jason Merrill.
 <address>
 <a href="about.html">The egcs team</a>
 <br>
-<small><i>Last modified on June 14, 1999.</i></small>
+<small><i>Last modified on June 15, 1999.</i></small>
 </address>
 
 </body>
