Add forgotten <BR>.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -20,7 +20,7 @@
 <P>
 <A HREF="faq.html">FAQ</A><BR>
 <A HREF="onlinedocs">Manual</A><BR>
-<A HREF="install/index.html">Installation</A>
+<A HREF="install/index.html">Installation</A><BR>
 <A HREF="readings.html">Readings</A>
 </P>
 <H2>Development</H2>
