--- a/htdocs/projects.html
+++ b/htdocs/projects.html
@@ -13,11 +13,9 @@ very much anymore, but who knows?
 <p>There is a separate project list for the <a
 href="proj-cpplib.html">C preprocessor</a>.
 
-<p>Haifa scheduler (<file>haifa-sched.c</file>,
-<file>loop.[ch]</file>, <file>unroll.[ch]</file>,
-<file>genattrtab.c<file>): (contact <a
-href="mailto:law@cygnus.com">law@cygnus.com</a> before starting any
-serious haifa work)
+<p>Haifa scheduler (haifa-sched.c, loop.[ch], unroll.[ch], genattrtab.c):
+(contact <a href="mailto:law@cygnus.com">law@cygnus.com</a> before
+starting any serious haifa work)
 
 <ul>
   <li>Fix all the formatting problems.  Simple, mindless work.
