Add regressions for m68k-hp-bsd4.4.

--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -291,6 +291,7 @@ m68k-hp-bsd4.4
 OK
 </td>
 <td>
+operators16.C
 </td>
 <td>
 </td>
@@ -480,7 +481,7 @@ to add at least one major C++ and Fortran package).
   <li> Fortran package(s)
 </ul>
 
-<p><i>Last modified on June 14, 1999.</i>
+<p><i>Last modified on June 16, 1999.</i>
 
 </body>
 </html>
