Re-enable a few mirrors that have returned from the dead.

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -26,6 +26,7 @@ if you are mirroring the egcs pages so we can note it here!
 <li>France (Versailles): <a href="ftp://ftp.uvsq.fr/pub/egcs/">ftp.uvsq.fr</a>
 <li>Czech Republic: <a href="ftp://sunsite.mff.cuni.cz/pub/GNU/egcs/">sunsite.mff.cuni.cz</a>
 <li>Czech Republic: <a href="ftp://ftp.gts.cz/pub/MIRRORS/ftp.cygnus.com/pub/egcs/">ftp.gts.cz</a>
+<LI><A HREF="ftp://sunsite.ms.mff.cuni.cz/GNU/egcs/">CZECH REPUBLIC: SunSITE</A>, thanks to <A HREF="mailto:jj@sunsite.mff.cuni.cz">Jakub Jelinek</A>!<BR>
 <li>Denmark: <a href="ftp://sunsite.auc.dk/pub/egcs/">sunsite.auc.dk</a>
 <LI>Germany (Berlin): <A HREF="ftp://ftp.fu-berlin.de/unix/languages/egcs/">Germany: ftp.fu-berlin.de </A>, thanks to <A HREF="mailto:leitner@math.fu-berlin.de">Felix von Leitner</A>!
 <LI>Germany: <A HREF="ftp://ftp.gwdg.de/pub/cygnus/egcs/">ftp.gwdg.de</a>
@@ -35,10 +36,10 @@ if you are mirroring the egcs pages so we can note it here!
 <LI>Poland: <A HREF="ftp://ftp.task.gda.pl/mirror/egcs.cygnus.com/pub/egcs">ftp.task.gda.pl</a>
 <LI>Sweden: <A HREF="ftp://ftp.sunet.se/pub/gnu/egcs/">ftp.sunet.se</a>
 <LI>Sweden: <A HREF="ftp://swamp.ios.chalmers.se/pub/egcs/">swamp.ios.chalmers.se</a>
-<!-- <LI>Sweden: <A HREF="ftp://ftp.lysator.liu.se/mirror/unix/egcs/">ftp.lysator.liu.se</a> -->
+<LI>Sweden: <A HREF="ftp://ftp.lysator.liu.se/mirror/unix/egcs/">ftp.lysator.liu.se</a>
 <LI>Brasil (releases only, no snapshots): <A HREF="ftp://ftp.unicamp.br/pub/gnu/=EXTRA=/cygnus/egcs/">ftp.unicamp.br</a>
 <LI>Portugal: <A HREF="ftp://ftp.lca.uevora.pt/pub/egcs">ftp.lca.uevora.pt</a>
-<!-- <LI>Romania: <A HREF="ftp://ftp.lbi.ro/mirrors/ftp.cygnus.com/pub/egcs">ftp.lbi.ro</a>, thanks to <a href="mailto:tim@lbi.ro">Surdu Bogdan</a>! -->
+<LI>Romania: <A HREF="ftp://ftp.lbi.ro/mirrors/ftp.cygnus.com/pub/egcs">ftp.lbi.ro</a>, thanks to <a href="mailto:tim@lbi.ro">Surdu Bogdan</a>!
 <LI>Athens, Greece: <a href="ftp://ftp.ntua.gr/pub/gnu//egcs/">ftp.ntua.gr</a>,
 thanks to <a href="mailto:ktroulos@noc.ntua.gr">Costas Troulos</a>.
 <LI>Nijmegen, Netherlands: <A HREF="ftp://ftp.nluug.nl/pub/languages/egcs">ftp.nluug.nl</a>, thanks to <a href="mailto:jc@ATComputing.nl">Jan Cristiaan van Winkel</a>!
@@ -46,7 +47,7 @@ thanks to <a href="mailto:ktroulos@noc.ntua.gr">Costas Troulos</a>.
 <LI>Japan: <A HREF="ftp://ftp.iij.ad.jp/pub/egcs">ftp.iij.ad.jp</a>
 <li>Japan: <a href="ftp://ftp.win.or.jp/pub/lang/egcs">ftp.win.or.jp</a>
 <li>Japan: <a href="ftp://ftp.telewaynet.ad.jp/pub/lang/egcs">ftp.telewaynet.ad.jp</a>
-<!-- <li>Japan: <a href="ftp://ftp.lab.kdd.co.jp/lang/egcs">ftp.lab.kdd.co.jp</a> -->
+<li>Japan: <a href="ftp://ftp.lab.kdd.co.jp/lang/egcs">ftp.lab.kdd.co.jp</a>
 <li>Japan (Ibaraki): <a href="ftp://ring.aist.go.jp/pub/lang/egcs">ring.aist.go.jp</a>
 <li>Japan: <a href="ftp://ring.etl.go.jp/pub/lang/egcs">ring.etl.go.jp</a>
 <li>Japan (Tokyo): <a href="ftp://ring.asahi-net.or.jp/pub/lang/egcs">ring.asahi-net.or.jp</a>
@@ -80,7 +81,6 @@ of the snapshots are mirrored here.
 <LI><A HREF="ftp://ftp.goof.com/pub/pcg/egcs/">US: Goof.COM</A>, thanks to <A HREF="http://www.goof.com/~mmead/">Matthew C. Mead</A>!<BR>
 <LI><A HREF="ftp://mirror.aarnet.edu.au/pub/pcg/egcs/">AUSTRALIA: aarnet.edu</A>, thanks to <A HREF="mailto:<mirror@mirror.aarnet.edu.au>">Paul Young / Jason Andrade</A>!<BR>
 <!-- <LI><A HREF="ftp://linux.colba.net/pub/pcg/egcs/">CANADA: linux.colba.net (Montreal)</A>, thanks to <A HREF="mailto:draggy@kosmic.org">Nicolas St-Pierre</A>!<BR> -->
-<!-- <LI><A HREF="ftp://ftp.lab.kdd.co.jp/agnu/pcg/egcs/">JAPAN: ftp.lab.kdd.co.jp (Saitama)</A>, thanks to <A HREF="mailto:hotta@lab.kdd.co.jp">Takao Hotta</A>!<BR> -->
 <LI><A HREF="ftp://euler.mat.univ.szczecin.pl/pub/Linux/pgcc/egcs/">POLAND: euler.mat.univ.szczecin.pl</A>, thanks to <A HREF="mailto:mkorz@euler.mat.univ.szczecin.pl">Marcin Korzonek</A>!<BR>
 <LI><A HREF="ftp://ftp.fu-berlin.de/unix/languages/pgcc/egcs/">GERMANY: ftp.fu-berlin.de (FU Berlin)</A>, thanks to <A HREF="mailto:leitner@math.fu-berlin.de">Felix von Leitner</A>!<BR>
 <LI><A HREF="ftp://ftp.pmi.saitama-med.ac.jp/pub/pcg/egcs/">JAPAN: ftp.pmi.saitama-med.ac.jp</A>, thanks to <A HREF="mailto:raraki@saitama-med.ac.jp">Ryuichiro Araki</A>!<BR>
@@ -88,7 +88,6 @@ of the snapshots are mirrored here.
 <LI><A HREF="ftp://ftp.hitachi-sk.co.jp/pub/pentium-gcc/egcs/">JAPAN: ftp.hitachi-sk.co.jp (Hitachi-Soft)</A>, thanks to <A HREF="mailto:miya@aqu.hitachi-sk.co.jp">Yasuki Miyazaki</A>!<BR>
 <!-- <LI><A HREF="ftp://linux.cis.nctu.edu.tw/pub/packages/pcg/egcs/">TAIWAN: linux.cis.nctu.edu.tw</A>, thanks to <A HREF="http://www.cis.nctu.edu.tw/~is83120/">Aiken Sam</A>!<BR> -->
 <LI><A HREF="ftp://ftp.maisel.int-evry.fr/pub/pgcc/egcs/">FRANCE: ftp.minet.net (MINET)</A>, thanks to <A HREF="http://www.minet.net/~olive/int/">Olivier Tharan</A>!<BR>
-<!-- <LI><A HREF="ftp://sunsite.ms.mff.cuni.cz/GNU/pgcc/egcs/">CZECH REPUBLIC: SunSITE</A>, thanks to <A HREF="mailto:jj@sunsite.mff.cuni.cz">Jakub Jelinek</A>!<BR> -->
 </UL>
 
 <p>If you wish to host a new mirror site, please contact
