asm-extn1.C is fixed.

--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -363,7 +363,7 @@ sparc-sun-solaris2.5
 OK
 </td>
 <td>
-asm-extn1.C
+OK
 </td>
 <td>
 </td>
@@ -382,7 +382,7 @@ sparc-sun-solaris2.7
 OK
 </td>
 <td>
-asm-extn1.C
+OK
 </td>
 <td>
 </td>
@@ -401,7 +401,7 @@ sparc-sun-sunos4.1
 OK
 </td>
 <td>
-asm-extn1.C
+OK
 </td>
 <td>
 </td>
@@ -443,23 +443,120 @@ These are bugs in libg++, not egcs or its support libraries.  Hacks were
 installed to work around these libg++ bugs so that libg++ could be tested.
 
 <h2> Package/Feature Testing </h2>
-<p> Do not worry about this yet.  Please concentrate on getting the egcs-1.1.2
-regression tests done first.
+<p>
+<table border="0">
+<tr>
+<th>
+Platform
+</th>
+<th>
+linux-2.2.10
+</th>
+<th>
+linux-2.3.6
+</th>
+<th>
+glibc-2.1.1
+</th>
+<th>
+redhat-5.2
+</th>
+<th>
+redhat-6.0
+</th>
+</tr>
+<tr>
+<td>
+alphaev5-unknown-linux-gnu
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+i586-unknown-linux-gnu
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+i686-unknown-linux-gnu
+</td>
+<td>
+OK
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+powerpc-unknown-linux-gnu
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+sparc-unknown-linux-gnu
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+</table>
+<h1> Package testing notes </h1>
+<p> Note the linux kernel, modules and related code must be compiled
+with -fno-strict-aliasing as the linux kernel violates ANSI/ISO C standards
+used to perform type based alias analysis.
 
 <p> In addition to performing regression testing we want to test major
 software packages with gcc-2.95.  This list is not complete (I would like
 to add at least one major C++ and Fortran package).
 
 <ul>
-  <li> linux-2.2.9 on the alpha, powerpc, sparc and x86
-  <li> RedHat 5.2 or 6.0 builds on the alpha, sparc and x86
-  <li> glibc-2.1 builds and passes its selftest on alpha, powerpc, sparc and
-       x86 linux ports.
   <li> C++ package(s)
   <li> Fortran package(s)
 </ul>
 
-<p><i>Last modified on June 18, 1999.</i>
+<p><i>Last modified on June 20, 1999.</i>
 
 </body>
 </html>
