Move "alias" news page down into the news directory.

--- a/htdocs/egcs-1.1/egcs-1.1.html
+++ b/htdocs/egcs-1.1/egcs-1.1.html
@@ -26,7 +26,7 @@ in older versions of egcs.
 <ul>
   <li> Global common subexpression elimination and
   global constant/copy propagation (aka <a href="../gcse.html">gcse</a>)
-  <li> Ongoing improvements to the <a href="../alias.html">alias analysis</a>
+  <li> Ongoing improvements to the <a href="../news/alias.html">alias analysis</a>
   support to allow for better optimizations throughout the compiler.
   <li> Vastly improved <a href="c++features.html">C++ compiler</a> and
   integrated C++ runtime libraries.
@@ -67,7 +67,7 @@ provided by Stanford)</a>
 
 
 <hr>
-<i>Last modified on April 1, 1999.</i>
+<i>Last modified on June 20, 1999.</i>
 
 </body>
 </html>
