--- a/htdocs/egcs-1.1/features.html
+++ b/htdocs/egcs-1.1/features.html
@@ -13,7 +13,7 @@
   <a href="c++features.html">page of their own!</a>
   <li>Compiler implements <a href="../gcse.html">global common subexpression
   elimination and global copy/constant propagation.</a>
-  <li>More major improvements in the <a href="../alias.html">alias analysis
+  <li>More major improvements in the <a href="../news/alias.html">alias analysis
   code</a>.
   <li> More major improvements in the exception handling code to improve
   performance, lower static overhead and provide the infrastructure for future
@@ -71,7 +71,7 @@
 </ul>
 
 <p><a href="../index.html">Return to the egcs home page</a>
-<p><i>Last modified:  April 1, 1999</i>
+<p><i>Last modified:  June 20, 1999</i>
 
 </body>
 </html>
