--- a/htdocs/gcc-2.95/features.html
+++ b/htdocs/gcc-2.95/features.html
@@ -24,7 +24,7 @@
   <li><a href="../chill.html">Chill</a> front-end and runtime has been
       integrated.
   <li><a href="../hoist.html">Memory Load hoisting/store sinking</a> in loops.
-  <li><a href="../alias.html">Type based alias analysis</a> is enabled by
+  <li><a href="../news/alias.html">Type based alias analysis</a> is enabled by
       default.
   <li>Experimental internationalization support.
   <li>Core compiler is based on the gcc2 development tree from Sept 30, 1998,
@@ -33,7 +33,7 @@
 </ul>
 
 <p><a href="../index.html">Return to the egcs home page</a>
-<p><i>Last modified:  May 31, 1999</i>
+<p><i>Last modified:  June 20, 1999</i>
 
 </body>
 </html>
