Move cfg.html into news subdirectory

--- a/htdocs/gcc-2.95/features.html
+++ b/htdocs/gcc-2.95/features.html
@@ -9,7 +9,7 @@
 <ul>
   <li>Just getting started...  More stuff to come.
   <li><a href="../lcm.html">Global CSE using lazy code motion algorithms</a>.
-  <li><a href="../cfg.html">Improved control flow graph analysis and
+  <li><a href="../news/cfg.html">Improved control flow graph analysis and
       manipulation</a>.
   <li><a href="../dse.html">Local dead store elimination</a>.
   <li><a href="../spill.html">Localized register spilling</a> to improve
