--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -65,7 +65,7 @@ The egcs project now has
 <a href="mailto:rth@cygnus.com">Richard Henderson</a> of
 <a href="http://www.cygnus.com">Cygnus Solutions</a> has donated a major
 rewrite of the
-<a href="http://egcs.cygnus.com/cfg.html">control flow analysis pass</a>
+<a href="http://egcs.cygnus.com/news/cfg.html">control flow analysis pass</a>
 of the compiler.
 </dd>
 
