Move chill.html into news subdirectory

--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -169,7 +169,7 @@ optimization</a> support.
 
 <dt><b>August 29, 1998</b></dt>
 <dd>
-  <a href="http://www.cygnus.com/">Cygnus</a> donates <a href="chill.html"><b>Chill front end and runtime</b></a>.
+  <a href="http://www.cygnus.com/">Cygnus</a> donates <a href="news/chill.html"><b>Chill front end and runtime</b></a>.
 </dd>
 
 <dt><b>August 25, 1998</b></dt>
