--- a/htdocs/gcc-2.95/features.html
+++ b/htdocs/gcc-2.95/features.html
@@ -21,7 +21,7 @@
   <li>Support for new systems (OpenBSD, others)
   <li><a href="http://sourceware.cygnus.com/java/gcj-announce.txt">Java</a>
       front-end has been integrated.  A <a href="http://egcs.cygnus.com/javaannounce.html">runtime library</a> is available separately.
-  <li><a href="../chill.html">Chill</a> front-end and runtime has been
+  <li><a href="../news/chill.html">Chill</a> front-end and runtime has been
       integrated.
   <li><a href="../hoist.html">Memory Load hoisting/store sinking</a> in loops.
   <li><a href="../news/alias.html">Type based alias analysis</a> is enabled by
