--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -50,7 +50,7 @@ the stack.
 <dt><b>March 10, 1999</b></dt>
 <dd>
 <a href="http://www.cygnus.com/">Cygnus</a> donates
-<a href="cprop.html">improved global constant propagation</a> and
+<a href="news/cprop.html">improved global constant propagation</a> and
 <a href="lcm.html">lazy code motion optimizer framework</a>.
 </dd>
 
