Move dse.html into news subdirectory

--- a/htdocs/gcc-2.95/features.html
+++ b/htdocs/gcc-2.95/features.html
@@ -12,7 +12,7 @@
   <li><a href="../news/cprop.html">Improved global constant/copy propagation</a>.
   <li><a href="../news/cfg.html">Improved control flow graph analysis and
       manipulation</a>.
-  <li><a href="../dse.html">Local dead store elimination</a>.
+  <li><a href="../news/dse.html">Local dead store elimination</a>.
   <li><a href="../spill.html">Localized register spilling</a> to improve
       speed and code density on small register class machines.
   <li>The new faster scheme for fixing vendor header files is eanbled by
