--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -87,7 +87,7 @@ at high end Macs as well as high end embedded applications.
 <dt><b>January 18, 1999</b></dt>
 <dd>
 Christian Bruel and Jeff Law donate improved
-<a href="dse.html">local dead store elimination.</a>
+<a href="news/dse.html">local dead store elimination.</a>
 </dd>
 
 <dt><b>January 14, 1999</b></dt>
