egcs-vcg moves into news subdirectory.

--- a/htdocs/gcc-2.95/features.html
+++ b/htdocs/gcc-2.95/features.html
@@ -12,6 +12,8 @@
   <li><a href="../news/cprop.html">Improved global constant/copy propagation</a>.
   <li><a href="../news/cfg.html">Improved control flow graph analysis and
       manipulation</a>.
+  <li><a href="../news/egcs-vcg.html">Ability to dump cfg information and
+      display it using vcg</a>.
   <li><a href="../news/dse.html">Local dead store elimination</a>.
   <li><a href="../spill.html">Localized register spilling</a> to improve
       speed and code density on small register class machines.
